--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,3 +66,6 @@
         systemd:
             name: rethinkdb
             state: restarted
+            enabled: yes
+            daemon_reload: yes
+
